--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,6 +14,8 @@ side:
         url: /categories/CS231n/
       - title: "밑바닥"
         url: /categories/mit/
+      - title: "3D ML"
+        url: /categories/3dML/
       - title: "Research"
         url: /categories/Paper_Review/
 
